[package]
name = "bwp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.4.0"
url = "2.3.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
